--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+	<link rel="stylesheet"
+		href="styles.css"/>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-
 width, initial-scale=1.0">
@@ -14,10 +16,11 @@ width, initial-scale=1.0">
 	</header>
 	<main>
 		<h2>Anisah Delmonte</h2>
+		<img src="unnamed.jpg" alt="" width="250" height="300"/>
 		<p>I'm Anisah, a 20-year-old with a penchant for fries. Currently, I'm pursuing a major in computer science and a minor in management studies. My passion lies at the intersection of technology and business, and I'm eager to combine these fields in my future career. Specifically, I aspire to dive into the exciting world of data science.Web development is interesting because it lets you build cool and useful stuff on the internet, like websites and apps, so you can share your ideas, connect with people, and create amazing online experiences. </p>
 	</main>
 	<footer>
-		<p>Copyright &copy; 2020 <Your Name>.</p>
+		<p>Copyright &copy; 2020 <Anisah Delmonte.</p>
 	</footer>
 </body>
 </html>
